HPS-73 feat: add auth